--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <script src="%PUBLIC_URL%/config.js"></script>
-    <title>Adzie</title>
+    <title>Bus Traveller</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
